[package]
name = "rusty_os"
version = "0.1.0"
authors = ["Tanmay Sachan <tnmysachan@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version="1.0"
features=["spin_no_std"]
